# tetris

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  ScreenHandler.h  block.cpp  block.h  block.hpp  board.cpp  board.h  constants.h  constants.hpp  flake.nix  main.cpp  screenHandler.cpp  shape.cpp  shape.h  square.cpp  square.h  timer.cpp  timer.h  ui.cpp  ui.h  ui.hpp
include/: ScreenToUse.hpp  block.hpp  board.hpp  common.hpp  constants.hpp  game.hpp  mockScreen.hpp  ncursesScreen.hpp  raylibScreen.hpp  screenHandler.hpp  screenInterface.hpp  screenTypeSelector.hpp  shape.hpp  square.hpp  tetromino.hpp  timer.hpp  ui.hpp
src/: block.cpp  board.cpp  game.cpp  main.cpp  ncursesScreen.cpp  raylibScreen.cpp  screenHandler.cpp  shape.cpp  square.cpp  tetromino.cpp  timer.cpp  ui.cpp
tests/: CMakeLists.txt  gameHelper.hpp  test_game.cpp  test_square.cpp  test_tetramino.cpp  test_ui.cpp  tetrominoHelper.hpp
